Update Example of loop annotation in S.cerevisiae.ipynb

--- a/Examples/Example of loop annotation in S.cerevisiae.ipynb
+++ b/Examples/Example of loop annotation in S.cerevisiae.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "#import cool file\n",
-    "S=cooler.Cooler('DATA_DICTY_SACCHEROMYCETES/Saccer_1000_no_norm.cool')\n",
+    "S=cooler.Cooler('Saccer_1000_no_norm.cool')\n",
     "\n",
     "#set resolution from cool\n",
     "resolution=S.info['bin-size']\n",
